impl GroupBack callback and fix user overriting