@@ -5,25 +5,52 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.telegram.telegrambots.client.okhttp.OkHttpTelegramClient;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
+import org.telegram.telegrambots.meta.api.objects.Update;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardRow;
 import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
 import org.telegram.telegrambots.meta.generics.TelegramClient;
+import ua.ndmik.bot.model.entity.UserSettings;
+import ua.ndmik.bot.repository.UserSettingsRepository;
 
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
+import static ua.ndmik.bot.model.MenuCallback.KYIV;
+import static ua.ndmik.bot.model.MenuCallback.REGION;
+
 @Service
 @Slf4j
 public class TelegramService {
 
     private final TelegramClient telegramClient;
+    private final UserSettingsRepository userRepository;
 
-    public TelegramService(@Value("${telegram.bot-token}") String botToken) {
+    public TelegramService(@Value("${telegram.bot-token}") String botToken,
+                           UserSettingsRepository userRepository) {
         this.telegramClient = new OkHttpTelegramClient(botToken);
+        this.userRepository = userRepository;
+    }
+
+    public void sendMainMenu(Update update) {
+        long chatId = update.getMessage() != null
+                ? update.getMessage().getChatId()
+                : update.getCallbackQuery().getMessage().getChatId();
+
+        if (update.getMessage() != null && !userRepository.existsByChatId(chatId)) {
+            createNewUser(chatId);
+        }
+
+        InlineKeyboardRow buttons = new InlineKeyboardRow(
+                List.of(
+                        button("Київ", KYIV.name()),
+                        button("Київщина", REGION.name())
+                ));
+        InlineKeyboardMarkup menu = menu(List.of(buttons));
+        sendMessage("Вітаю, оберіть дію", menu, chatId);
     }
 
     public void sendMessage(String text, InlineKeyboardMarkup markup, long chatId) {
@@ -61,6 +88,13 @@ public class TelegramService {
         return mapOfChunks.values()
                 .stream()
                 .map(InlineKeyboardRow::new)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    private UserSettings createNewUser(Long chatId) {
+        return userRepository.save(UserSettings.builder()
+                .chatId(chatId)
+                .isNotificationEnabled(true)
+                .build());
     }
 }
